--- a/handi/handiApp/templates/handiApp/home.html
+++ b/handi/handiApp/templates/handiApp/home.html
@@ -45,6 +45,11 @@
 					    Mentor Requests
 				    </div>
 				</a>
+				<a href="{% url 'handiApp:userType' %}">
+				    <div class="nav-item dashboard-item" style="margin-bottom:20px;">
+					    User Types
+				    </div>
+				</a>
 			{% endif %}
 			<a href="{% url 'handiApp:logout' %}">
 			    <div class="nav-item dashboard-item" style="margin-bottom:20px;">
