added logo to menu

--- a/handi/handiApp/templates/handiApp/account.html
+++ b/handi/handiApp/templates/handiApp/account.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="row nav-header">
                 <div class="col-xs-7">
-                    <h2 class="nav-title">&nbsp;Handi</h2>
+                    <h2 class="nav-title"><img src="{% static 'handiApp/photos/handiLogo.png' %}" height="55px"/>&nbsp;Handi</h2>
                 </div>
                 <div class="col-xs-2" onclick="toggleNav()">
                     <span class="hamburger-left-icon">{% bs_icon 'list' size='2em' color='#EBEBEB' %}</span>
