--- a/handi/handiApp/templates/handiApp/home.html
+++ b/handi/handiApp/templates/handiApp/home.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="row nav-header">
                 <div class="col-xs-7">
-                    <h2 class="nav-title">&nbsp;Handi</h2>
+                    <h2 class="nav-title"><img src="{% static 'handiApp/photos/handiLogo.png' %}" height="55px"/>&nbsp;Handi</h2>
                 </div>
                 <div class="col-xs-2" onclick="toggleNav()">
                     <span class="hamburger-left-icon">{% bs_icon 'list' size='2em' color='#EBEBEB' %}</span>
@@ -76,8 +76,6 @@
                 <div class="dashboard-photo">
                     <img src="{% static 'handiApp/photos/handiLogo.png' %}" height="200px"/>
                 </div>
-                <p>Hello, {{username}}</p>
-                <br>
             </div>
             <div class="dashboard-items row">
                 <div class="dashboard-balance col-xs-12">
@@ -85,6 +83,12 @@
                         Account Balance:
                     </h3>
                     <h1>${{balance}}</h1>
+		    {% if userType == "Manager" or userType == "Admin" %}
+                    <h3>
+                        Company Balance:
+                    </h3>
+                    <h1>${{companyBalance}}</h1>
+		    {% endif %}
                 </div>
             </div>
         </div>
