added manager dashboard

--- a/handi/handiApp/templates/handiApp/account.html
+++ b/handi/handiApp/templates/handiApp/account.html
@@ -47,6 +47,11 @@
 				    User Types
 			    </div>
 			</a>
+			<a href="{% url 'handiApp:managerDashboard' %}">
+			    <div class="nav-item dashboard-item" style="margin-bottom:20px;">
+				    Manager Dashboard
+			    </div>
+			</a>
 		{% endif %}
 		<a href="{% url 'handiApp:logout' %}">
 		    <div class="nav-item dashboard-item" style="margin-bottom:20px;">
